syntax = "proto3";

package replication;

option go_package = "github.com/maxpoletaev/kv/replication/proto";

message Empty {}

message Value {
    bytes data = 1;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    repeated Value values = 1;
    string version = 2;
}

message PutRequest {
    string key = 1;
    Value value = 2;
    string version = 3;
}

message PutResponse {
    string version = 1;
}

service CoordinatorService {
    rpc ReplicatedGet(GetRequest) returns (GetResponse);
    rpc ReplicatedPut(PutRequest) returns (PutResponse);
}
